[package]
name = "ocelot"
version = "0.0.1"
edition = "2024"
description = "SIMD and GPU powered PRNG lib"
license = "Apache-2.0"
repository = "https://github.com/frozen-lab/ocelot"
keywords = ["prng", "random", "prng", "simd", "gpu"]
categories = ["algorithms", "science", "simulation"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = "none"
